--- a/index.html
+++ b/index.html
@@ -13,27 +13,16 @@
 
 </head>
 <body>
-    
-    <!-- Navigation bar -->
     <header class="header">
-        <!-- Logo -->
-        <a href="#" class="logo">LR</a>
-
-        <!-- Hamburger icon -->
-        <input class="side-menu" type="checkbox" id="side-menu"/>
-        <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
-
-        <!-- Menu -->
+        <a class="logo" href="#">LR</a>
+        <input class="side-menu" type="checkbox" id="side-menu">
+        <label class="hamb" for="side-menu">
+            <span class="hamb-line"></span>
+        </label>
         <nav class="nav">
             <ul class="menu">
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#">Blog</a> </li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">Block</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">About</a></li>
@@ -41,19 +30,10 @@
             </ul>
         </nav>
     </header>
-
-    <!-- Main content -->
     <main>
-        <article>
-            <h1>
-                Some content
-            </h1>
-            <p>
-                More Content
-            </p>
-        </article>
-
+        <h1>Some content</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat porro obcaecati vitae culpa, assumenda itaque quos asperiores. Nihil aliquam eum animi necessitatibus porro quibusdam vero totam. Quibusdam rerum facere odit molestiae eius culpa explicabo numquam eveniet sequi consectetur iste sunt dolor perferendis quam magnam, doloribus cum aut excepturi dolores ad id consequatur vitae unde! Distinctio quia aliquid earum beatae labore ab magnam, ducimus rem tempore inventore quos unde fugit sunt! Expedita animi reiciendis sit. Porro tempore aspernatur voluptatem voluptatum itaque exercitationem repudiandae quis ratione sed soluta et ipsam quo harum dolor voluptates numquam quibusdam, impedit architecto consequatur ad? Id, cupiditate repellat iure illo itaque soluta at, molestias eveniet in beatae iste similique consequatur natus quia ea quasi, necessitatibus eius ipsum dolores dolore labore a facere. Vel maxime consequatur culpa, laudantium deserunt odit architecto ullam error ab unde voluptate alias mollitia itaque explicabo incidunt, expedita nesciunt esse repellendus quisquam! Consectetur, a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis ab delectus, molestias voluptas hic quidem iure? Possimus laborum exercitationem quis at ea autem, quam deserunt sequi dignissimos molestiae porro ipsum eaque officia odio illo. Magnam enim quam commodi quas tempora quia sed ipsam reiciendis, magni voluptates illum neque sit. Excepturi ab non odit placeat quas maiores. Quas facere minima quod ratione dignissimos! Accusamus cumque eius saepe amet rem voluptatum perspiciatis ducimus ad ratione nisi nobis iure aut sint tenetur officia alias veritatis, debitis magnam dolorem ea laborum maxime! Eveniet enim inventore voluptatum! Fuga officiis natus, maxime ex amet vel doloremque ad exercitationem quo, a voluptates alias deleniti atque placeat harum saepe similique optio iure nulla? Ut non ipsam eveniet iste quaerat vero est. Dignissimos, nostrum nesciunt! Praesentium labore mollitia officia commodi necessitatibus. Doloremque hic unde vitae culpa sunt velit possimus iure, nulla nostrum dolore corrupti atque enim inventore labore ex? Dignissimos tempora minus reprehenderit necessitatibus deserunt quibusdam quaerat qui, impedit neque ut assumenda, expedita vero! Molestiae eos debitis nisi quam explicabo laborum, cumque inventore recusandae velit praesentium? Rerum laboriosam sequi eius possimus maiores iste, ea corporis labore dolorem repellendus sunt illo, beatae obcaecati ut libero voluptatem aspernatur perspiciatis. Nulla, natus.</p>
     </main>
-
+<script src="script.js"></script>    
 </body>
 </html>
